--- a/66495-h/66495-h.htm
+++ b/66495-h/66495-h.htm
@@ -263,7 +263,7 @@ img.w100 {width: 100%;}
 
 <body>
 
-<div style='text-align:center; font-size:1.2em; font-weight:bold'>The Project Gutenberg eBook of Canada; its Defences, Condition, and Resources, by William Howard Russell</div>
+<div style='text-align:center; font-size:1.2em; font-weight:bold'>The Project Gutenberg eBook of Canada; its Defenses, Condition, and Resources, by William Howard Russell</div>
 
 <div style='display:block; margin:1em 0'>
 This eBook is for the use of anyone anywhere in the United States and
@@ -275,12 +275,12 @@ are not located in the United States, you will have to check the laws of the
 country where you are located before using this eBook.
 </div>
 
-<p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Title: Canada; its Defences, Condition, and Resources</p>
+<p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Title: Canada; its Defenses, Condition, and Resources</p>
 <p style='display:block; margin-top:0; margin-bottom:1em; margin-left:2em; text-indent:0;'>Being a third and concluding volume of "My Diary, North and South"</p>
 
 <div style='display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em'>Author: William Howard Russell</div>
 
-<div style='display:block; margin:1em 0'>Release Date: October 9, 2021 [eBook #66495]</div>
+<div style='display:block; margin:1em 0'>Release Date: October 8, 2021 [eBook #66495]</div>
 
 <div style='display:block; margin:1em 0'>Language: English</div>
 
@@ -288,7 +288,7 @@ country where you are located before using this eBook.
 
 <div style='display:block; margin-left:2em; text-indent:-2em'>Produced by: MWS, John Campbell and the Online Distributed Proofreading Team at https://www.pgdp.net (This file was produced from images generously made available by The Internet Archive/American Libraries.)</div>
 
-<div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK CANADA; ITS DEFENCES, CONDITION, AND RESOURCES ***</div>
+<div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK CANADA; ITS DEFENSES, CONDITION, AND RESOURCES ***</div>
 
 
 <div class="transnote">
@@ -13838,7 +13838,7 @@ Several instances of ‘Plattsburg’ changed to ‘Plattsburgh’.<br />
 </div>
 
 
-<div style='display:block; margin-top:4em'>*** END OF THE PROJECT GUTENBERG EBOOK CANADA; ITS DEFENCES, CONDITION, AND RESOURCES ***</div>
+<div style='display:block; margin-top:4em'>*** END OF THE PROJECT GUTENBERG EBOOK CANADA; ITS DEFENSES, CONDITION, AND RESOURCES ***</div>
 <div style='text-align:left'>
 
 <div style='display:block; margin:1em 0'>
